change on nav.ejs

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
       </li>
       <li>
         <!--<a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Heroku Works</a>-->
-        <a <span class="glyphicon glyphicon-user"></span> How Heroku Works</a>
+         <span class="glyphicon glyphicon-user"></span> How Heroku Works
       </li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
