change on db.ejs

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -25,10 +25,10 @@
           </ul>
       </li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="navbar-right">
-        <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> Heroku Dev Center</a>
-      </li>
-    </ul>
+    <!--<ul class="nav navbar-nav navbar-right">-->
+    <!--  <li class="navbar-right">-->
+    <!--    <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> Heroku Dev Center</a>-->
+    <!--  </li>-->
+    <!--</ul>-->
   </div>
 </nav>
