--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -9,7 +9,7 @@
 <% include ../partials/nav.ejs %>
 
 <div class="container">
-<h2>Database Results</h2>
+<h2>Database Results Testing testing</h2>
 
 <ul>
     <% results.forEach(function(r) { %>
